--- a/app.css
+++ b/app.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Bitter', serif;
+    padding: 0;
 }
 
 h3 {
@@ -13,6 +14,13 @@ h3 {
 }
 
 .smallHeader {
+    letter-spacing: 1.5px;
+    font-family: 'Martel', serif;
+    font-size: 0.9rem;
+}
+
+#footer {
+    text-align: center;
     letter-spacing: 1.5px;
     font-family: 'Martel', serif;
     font-size: 0.9rem;
